FIX table mod-card double border and radius

--- a/packages/scss/src/components/_table.scss
+++ b/packages/scss/src/components/_table.scss
@@ -150,6 +150,14 @@
 				padding-right: _component("table.card.padding");
 			}
 		}
+		.table-body-row {
+			background-color: transparent;
+			&:last-child {
+				.table-body-row-cell {
+					border-bottom: none;
+				}
+			}
+		}
 		.table-body-row-cell {
 			&:first-child {
 				padding-left: _component("table.card.padding");
